--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,9 +9,6 @@
                     turbo_confirm: "Are you sure?"
                   } %></li>
 </ul>
+<%= link_to "See all comments", article_comments_path(@article) %>
+<%= link_to "Add a comment", new_article_comment_path(@article) %>
 
-<h2>Comments</h2>
-<%= render @article.comments %>
-
-<h2>Add a comment:</h2>
-<%= render "comments/form", article: @article %>
