--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,7 @@
                     turbo_confirm: "Are you sure?"
                   } %></li>
 </ul>
-<%= link_to "See all comments", article_comments_path(@article) %>
-<%= link_to "Add a comment", new_article_comment_path(@article) %>
+<%= link_to "See all comments", article_comments_path(@article) %> </br>
+<%= link_to "Add a comment", new_article_comment_path(@article) %> </br>
+<%= link_to "Back to articles", articles_path %>
 
