--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,7 @@
 <h2>Add Comment</h2>
 
 <%= render "form", comment: @comment, article: @article %>
+
+<p>
+  <%= link_to "Back to article", article_path(@article) %>
+</p>
